# qfs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LIBSQL_MIGRATION_PLAN.md  LIBSQL_RESEARCH.md  README.md
.tasks/: 01-docid-implementation.md  02-line-range-extraction.md  03-multi-get-with-patterns.md  04-ls-command.md  05-context-system.md
docs/: integration.md
libsql-test/: Cargo.toml
libsql-test/src/: main.rs
qfs/: Cargo.toml
qfs-cli/: Cargo.toml
qfs-cli/src/: main.rs  mcp.rs
qfs-embed/: Cargo.toml
qfs-embed/src/: lib.rs
qfs-mcp/: Cargo.toml
qfs-mcp/src/: main.rs
qfs/src/: error.rs  lib.rs
qfs/src/indexer/: mod.rs
qfs/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
qfs/src/parser/: mod.rs
qfs/src/scanner/: mod.rs
qfs/src/search/: mod.rs
qfs/src/store/: mod.rs  schema.rs
qfs/tests/: golden_tests.rs  integration_tests.rs  mcp_tests.rs
qfs/tests/fixtures/: python_basics.md  rust_guide.md  web_development.md
qfs/tests/fixtures/corpus/: api-design.md  async-await.md  database-fundamentals.md  memory-management.md  no-frontmatter.md  rust-guide.md  search-engine.rs  special-chars-test.md  typescript-patterns.md  utils.ts
qfs/tests/golden/: index_stats.golden.json  search_basic.golden.json  search_code.golden.json  search_multiword.golden.json
tests/: integration.rs
tests/integration/: mod.rs  search_tests.rs
