[workspace]
resolver = "2"
members = ["qfs", "qfs-cli", "qfs-embed", "qfs-mcp"]
exclude = ["libsql-test"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Juan Bermudez"]
license = "MIT"
repository = "https://github.com/juanbermudez/qfs"
description = "Quick File Search - A universal local file search engine with hybrid BM25+vector search"
readme = "README.md"
keywords = ["search", "full-text", "vector", "embedding", "mcp"]
categories = ["command-line-utilities", "database", "text-processing"]

[workspace.dependencies]
# SQLite and search (bundled includes FTS5 by default)
rusqlite = { version = "0.32", features = ["bundled"] }

# Embeddings (optional)
fastembed = "4"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# File system
walkdir = "2.4"
glob = "0.3"
notify = "6.1"

# Hashing and crypto
sha2 = "0.10"

# Content detection
mime_guess = "2.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.10"

# Directories
dirs = "5.0"

# Testing
tempfile = "3.10"
assert_fs = "1.1"
predicates = "3.1"

# Internal crates
qfs = { path = "qfs" }
qfs-embed = { path = "qfs-embed" }
