[package]
name = "qfs-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "QFS command-line interface"

[[bin]]
name = "qfs"
path = "src/main.rs"

[dependencies]
# Core library
qfs = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
assert_cmd = "2.0"
