[package]
name = "qfs-embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "QFS embedding generation (optional feature)"

[dependencies]
# Embeddings
fastembed = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
