[package]
name = "qfs-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "QFS MCP server - Model Context Protocol server for file search"

[[bin]]
name = "qfs-mcp"
path = "src/main.rs"

[dependencies]
# Core library
qfs = { workspace = true }

# CLI argument parsing
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
